bison_java_deps = [
  "//base:base_java",
  "//base:jni_java",
  "//components/embedder_support/android:content_view_java",
  "//components/embedder_support/android:view_java",
  "//components/embedder_support/android:web_contents_delegate_java",
  "//components/viz/service:service_java",
  "//components/navigation_interception/android:navigation_interception_java",
  # "//services/device/public/mojom",
  # ActivityWindowAndroid requires
  "//ui/android:ui_java",
  "//net/android:net_java",
  "//content/public/android:content_java",
  "//services/network/public/mojom:mojom_java",

  # or not require
  "//third_party/blink/public:blink_headers_java",
  "//components/variations/android:variations_java",
  "//components/policy/android:policy_java",
  "//components/autofill/android:autofill_java",
  "//components/autofill/android:provider_java",
]